# muu

./: .gitignore  .gitmodules  flake.nix  meson.build
.cache/clangd/index/: main.cpp.AD0439C427B76F63.idx
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: f0gyrfp8wlynwfdyczlbg31yifap55pn-source  vfv24m2bvn4xvxa02plma0755yrnd92l-source
src/: main.cpp
subprojects/: material-color-utilities.wrap
subprojects/material-color-utilities-main/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/packagefiles/material-color-utilities/: meson.build
